# SnakeCore

./: README.md
Snake/: CMakeLists.txt  Snake.hpp
Snake/src/: GameManager.cpp  GamePart.cpp  GameResult.cpp  SnakeManager.cpp
Snake/src/include/: GameManager.hpp  GamePart.hpp  GameResult.hpp  ScreenManager.hpp  SnakeConfig.hpp  SnakeManager.hpp
